--- a/WpfLearn/WpfLearn/Controls/DrawVisual.xaml
+++ b/WpfLearn/WpfLearn/Controls/DrawVisual.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:WpfLearn.Models"
-        Title="DrawVisual" WindowState="Maximized" Initialized="DrawVisual_OnInitialized" Height="300" Width="300">
+        Title="电子地图" WindowState="Maximized" Initialized="DrawVisual_OnInitialized" Height="300" Width="300">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto"></ColumnDefinition>
