--- a/WpfLearn/WpfLearn/MainWindow.xaml
+++ b/WpfLearn/WpfLearn/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="WpfLearn.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="550" Width="525" ResizeMode="CanResizeWithGrip" ShowInTaskbar="True"
+        Title="电子地图" Height="550" Width="525" ResizeMode="CanResizeWithGrip" ShowInTaskbar="True"
         Topmost="True"  Initialized="MainWindow_OnInitialized" Loaded="MainWindow_OnLoaded" Unloaded="MainWindow_OnUnloaded" Closing="MainWindow_OnClosing"
         Closed="MainWindow_OnClosed"
         Activated="MainWindow_OnActivated"
