--- a/WpfLearn/WpfLearn/Controls/DataGrid.xaml
+++ b/WpfLearn/WpfLearn/Controls/DataGrid.xaml
@@ -61,6 +61,8 @@ FontSize="10">
                     </Border>
                 </DataTemplate>
             </DataGrid.RowDetailsTemplate>
+            
+            <DataGrid.ItemContainerStyle></DataGrid.ItemContainerStyle>
 
 
         </DataGrid>
