--- a/WpfLearn/WpfLearn/App.xaml
+++ b/WpfLearn/WpfLearn/App.xaml
@@ -1,7 +1,7 @@
 ﻿<Application x:Class="WpfLearn.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="MVVM/MainWindow.xaml"
+             StartupUri="Commands/CommandTest.xaml"
              Startup="App_OnStartup"
              Exit="App_OnExit"
              Activated="App_OnActivated"
@@ -10,7 +10,7 @@
              DispatcherUnhandledException="App_OnDispatcherUnhandledException"
              >
     <Application.Resources>
-        <!--<Style x:Key="BigFontButtonStyle" TargetType="Button">
+        <Style x:Key="BigFontButtonStyle" TargetType="Button">
             <Style.Setters>
                 <Setter Property="Control.FontFamily" Value="Times New Roman" />
                 <Setter Property="Control.FontSize" Value="18" />
@@ -38,7 +38,7 @@
                         <Setter Property="Control.Foreground" Value="DarkRed" />
                     </MultiTrigger.Setters>
                 </MultiTrigger>
-                <EventTrigger>
+                <EventTrigger RoutedEvent="Mouse.MouseEnter">
                     <EventTrigger.Actions>
                         <BeginStoryboard>
                             <Storyboard>
@@ -47,7 +47,16 @@
                         </BeginStoryboard>
                     </EventTrigger.Actions>
                 </EventTrigger>
+                <EventTrigger RoutedEvent="Mouse.MouseLeave">
+                    <EventTrigger.Actions>
+                        <BeginStoryboard>
+                            <Storyboard>
+                                <DoubleAnimation Duration="0:0:1" Storyboard.TargetProperty="FontSize" />
+                            </Storyboard>
+                        </BeginStoryboard>
+                    </EventTrigger.Actions>
+                </EventTrigger>
             </Style.Triggers>
-        </Style>-->
+        </Style>
     </Application.Resources>
 </Application>
