--- a/通用工具/LogCleaner/LogCleaner/MainWindow.xaml
+++ b/通用工具/LogCleaner/LogCleaner/MainWindow.xaml
@@ -1,12 +1,12 @@
 ﻿<Window x:Class="LogCleaner.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="日志清理器" MinHeight="400" MinWidth="600" Icon="Images/ico.ico" Closing="MainWindow_OnClosing">
+        Title="日志清理器" MinHeight="400" MinWidth="600" Icon="Images/ico.ico" Closing="MainWindow_OnClosing" Loaded="MainWindow_OnLoaded">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="4*"></ColumnDefinition>
             <ColumnDefinition Width="Auto"></ColumnDefinition>
-            <ColumnDefinition Width="1.3*"></ColumnDefinition>
+            <ColumnDefinition Width="0"></ColumnDefinition>
         </Grid.ColumnDefinitions>
         <Grid Background="LightBlue" Margin="0,0,4,0">
             <Grid.RowDefinitions>
@@ -27,17 +27,17 @@
                                 </Style>
                             </GridView.ColumnHeaderContainerStyle>
                             <GridView.Columns>
-                                <GridViewColumn Header="标题" Width="160" DisplayMemberBinding="{Binding Path=MainWindowTitle}"></GridViewColumn>
-                                <GridViewColumn Header="程序名" Width="100" DisplayMemberBinding="{Binding Path=ProgramName}"></GridViewColumn>
-                                <GridViewColumn Header="扫描时间" Width="100" DisplayMemberBinding="{Binding Path=ScannerTime}"></GridViewColumn>
-                                <GridViewColumn Header="进程数" Width="60" DisplayMemberBinding="{Binding Path=ProcessCount}"></GridViewColumn>
-                                <GridViewColumn Header="重启次数" Width="80" DisplayMemberBinding="{Binding Path=RebootCount}"></GridViewColumn>
-                                <GridViewColumn Header="重启时间" Width="100" DisplayMemberBinding="{Binding Path=RebootTime}"></GridViewColumn>
-                                <GridViewColumn Header="详细地址" Width="200" DisplayMemberBinding="{Binding Path=FileName}"></GridViewColumn>
+                                <GridViewColumn Header="扫描目录" Width="160" DisplayMemberBinding="{Binding Path=Directory}"></GridViewColumn>
+                                <GridViewColumn Header="清理文件类型" Width="110" DisplayMemberBinding="{Binding Path=SearchPattern}"></GridViewColumn>
+                                <GridViewColumn Header="保存时间(天)" Width="110" DisplayMemberBinding="{Binding Path=ReserveDays}"></GridViewColumn>
+                                <GridViewColumn Header="清理模式" Width="100" DisplayMemberBinding="{Binding Path=CleanDetail}"></GridViewColumn>
+                                <GridViewColumn Header="最近清理时间" Width="160" DisplayMemberBinding="{Binding Path=LastCleanTime}"></GridViewColumn>
+                                <GridViewColumn Header="最近清理清理文件数" Width="120" DisplayMemberBinding="{Binding Path=LastCleanFileCount}"></GridViewColumn>
+                                <GridViewColumn Header="最近异常信息" Width="200" DisplayMemberBinding="{Binding Path=LastException}"></GridViewColumn>
                                 <GridViewColumn Header="" Width="80">
                                     <GridViewColumn.CellTemplate>
                                         <DataTemplate>
-                                            <Button Content="删除" Width="50" BorderThickness="0" Padding="4" Background="DarkSeaGreen" Tag="{Binding Path=FileName}" Click="Btn_Delete_OnClick"></Button>
+                                            <Button Content="删除" Width="50" BorderThickness="0" Padding="4" Background="DarkSeaGreen" Tag="{Binding Path=Directory}" Click="Btn_Delete_OnClick"></Button>
                                         </DataTemplate>
                                     </GridViewColumn.CellTemplate>
                                 </GridViewColumn>
