--- a/通用工具/LogCleaner/LogCleaner/Windows/ConfigWindow.xaml
+++ b/通用工具/LogCleaner/LogCleaner/Windows/ConfigWindow.xaml
@@ -15,7 +15,7 @@
                         <RowDefinition Height="Auto"></RowDefinition>
                     </Grid.RowDefinitions>
 
-                    <TextBlock Margin="4,8,4,12" ToolTip="默认清理*.log和*.txt文件，可修改配置文件来修改">请选择日志清理方式：</TextBlock>
+                    <TextBlock Margin="4,8,4,12" ToolTip="默认清理*.log文件，可修改配置文件来修改">请选择日志清理方式：</TextBlock>
                     <GroupBox Name="GbCleanManner" Grid.Row="1" Margin="5">
                         <StackPanel>
                             <RadioButton Name="RadioByDay" IsChecked="True" Margin="4,8,1,4">按天清理日志</RadioButton>
