--- a/WpfLearn/WpfLearn/App.xaml
+++ b/WpfLearn/WpfLearn/App.xaml
@@ -1,7 +1,7 @@
 ﻿<Application x:Class="WpfLearn.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="Bindings/ElementBinding.xaml"
+             StartupUri="Thirds\Metro_3rds\MetroMainWindow.xaml"
              Startup="App_OnStartup"
              Exit="App_OnExit"
              Activated="App_OnActivated"
@@ -10,7 +10,24 @@
              DispatcherUnhandledException="App_OnDispatcherUnhandledException"
              >
     <Application.Resources>
-        <Style x:Key="BigFontButtonStyle" TargetType="Button">
+
+        <!-- Metro样式 -->
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <!-- MahApps.Metro resource dictionaries. Make sure that all file names are Case Sensitive! -->
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Fonts.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Colors.xaml" />
+                <!-- Accent and AppTheme setting -->
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/Blue.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/BaseLight.xaml" />
+
+                <!-- 控件样式-->
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/FlatButton.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+        
+        <!--<Style x:Key="BigFontButtonStyle" TargetType="Button">
             <Style.Setters>
                 <Setter Property="Control.FontFamily" Value="Times New Roman" />
                 <Setter Property="Control.FontSize" Value="18" />
@@ -72,7 +89,9 @@
                     <Setter Property="Border.BorderBrush" Value="DarkKhaki"></Setter>
                 </Trigger>
             </ControlTemplate.Triggers>
-        </ControlTemplate>
-        
+        </ControlTemplate>-->
+
+
+   
     </Application.Resources>
 </Application>
